[package]
name = "sqlite-xsv"
version = "0.1.0"
edition = "2021"

[dependencies]
#sqlite-loadable = {version="0.0.2", path="../sqlite-loadable-rs"}
sqlite-loadable = "0.0.2"
csv = "1.1"
flate2 = {version="1.0.24", optional=true}
url = {version="2.3.1", optional = true}

[build-dependencies]
cbindgen = "0.24.3"

[features]
default = ["gzip_support"]
gzip_support = ["dep:flate2"]


[lib]
crate-type=["lib", "staticlib", "cdylib"]
name = "xsv0"