[package]
name = "sqlite-xsv"
version = "0.2.1-alpha.6"
edition = "2021"

[dependencies]
#sqlite-loadable = {path="../sqlite-loadable-rs"}
sqlite-loadable = "0.0.5"
csv = "1.1"
flate2 = {version="1.0.24", optional=true}
zstd = {version="0.12.1",  optional=true}

[build-dependencies]
cbindgen = "0.24.3"

[features]
default = ["gzip_support", "zstd_support"]
gzip_support = ["dep:flate2"]
zstd_support = ["dep:zstd"]


[lib]
crate-type=["lib", "staticlib", "cdylib"]
